# miniforge

./: .gitignore  .gitmodules  .markdownlint.jsonc  .markdownlintignore  .miniforge-session-id  2026-02-16-190642-this-session-is-being-continued-from-a-previous-co.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOGFOODING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MAINTAINERS.md  PR-552.md  PR_TASK_EXECUTOR.md  README.md  ROADMAP.md  SECURITY.md  SPEC_SYNTHESIS_SUMMARY.md  TEST_OPPORTUNITIES.md  agents.md  bb-tools.edn  bb.edn  build.clj  claude.md  demo-self-implementation.clj  deps.edn  dogfood-tasks.edn  readme.md  test-config-system.sh  workspace.edn
.calva/: repl.calva-repl
.clj-kondo/: config.edn
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
Formula/: miniforge.rb.template
contracts/: Cargo.toml
contracts/crates/supervisory-entities/: Cargo.toml
contracts/crates/supervisory-entities/src/: entities.rs  lib.rs
contracts/src/: agent_session.rs  attention_item.rs  lib.rs  policy_evaluation.rs  pr_fleet_entry.rs  types.rs  workflow_run.rs
contracts/tests/: json_fixtures.rs  serde_roundtrip.rs
contracts/tests/fixtures/: agent_session.json  agent_session_minimal.json  attention_item.json  attention_item_minimal.json  policy_evaluation.json  policy_evaluation_fail.json  policy_evaluation_with_violations.json  pr_fleet_entry.json  pr_fleet_entry_high_risk.json  pr_fleet_entry_minimal.json  workflow_run.json  workflow_run_minimal.json
dev/: add-license-headers.clj  test.clj  validate_model_selection.clj
docs/: GITHUB_APP_SETUP.md  INDEX.md  MODEL_SELECTION.md  NORMATIVE_SPECS_COMPLETE.md  RELEASE.md  SPEC_SYNTHESIS_SUMMARY.md  configuration.md  demo.md  deployment.md  development-guidelines.md  founder-prior-art.md  gap-analysis-n1-n9.md  meta-agents.md  meta-meta-loop-session.md  platform-support.md  pr-fsm-response-chain.md  progress-review-2026-04-13.md  quickstart.md  test-plan-cli-integration.md
event-client/: Cargo.toml
event-client/src/: client.rs  event.rs  events.rs  lib.rs  main.rs  parser.rs  replay.rs  watcher.rs
examples/: model_selection_demo.clj
scoop/: README.md
scripts/: dogfood-dag.clj  generate-test-workflow-for-phases.bb  mcp-artifact-server.bb  mcp-context-server.bb  run-dogfood.clj  test-changed-bricks.bb  test-mcp-artifact-server.bb
specs/: README.md  SPEC_INDEX.md  decompose-test-files.spec.edn  gap-analysis-reliability-nines.md
src/: example.clj
tasks/: build.clj  commit_budget.clj  dogfood.clj  etl.clj  fmt.clj  harvest.clj  install.clj  lint.clj  release.clj  standards.clj  test_runner.clj  work.clj
test/: example_test.clj  feature_test.clj
tests/: graalvm_compatibility_test.clj
tools/: strata_audit.bb
work/: QUEUE.md  README.md  agent-failure-classification.edn  agent-failure-classification.spec.edn  agent-stream-watchdog-and-resume.spec.edn  algorithms-tests.spec.edn  artifact-extraction-agent.spec.edn  artifact-persistence-tests.spec.edn  backend-failover.spec.edn  behavioral-verification-monitor.spec.edn  capsule-cleanup-reliability.spec.edn  capsule-release-pr.spec.edn  capsule-runtime-spec-wiring.spec.edn  clj-xref-context-neighborhoods.spec.edn  codex-cli-integration.edn  codex-cli-integration.spec.edn  configurable-spec-types.spec.edn  control-plane-completion.spec.edn  dashboard-production-ready.edn  dashboard-production-ready.spec.edn  decompose-test-files.spec.edn  environment-promotion-pipeline.spec.edn  event-log-tool-visibility.spec.edn  evidence-execution-mode.spec.edn  exception-cleanup-inventory.md  external-dependency-health-and-failure-attribution.spec.edn  finish-event-telemetry.edn  finish-event-telemetry.spec.edn  finish-yc-mvp-tasks.edn  finish-yc-mvp.spec.edn  fix-artifact-persistence.spec.edn  fleet-supervisory-deferred.spec.edn  generalized-classification-runtime-handoff.md  gitlab-support-tasks.edn  gitlab-support-tasks.spec.edn  gitlab-support.spec.edn  intelligent-model-selection.edn  intelligent-workflow-selection.edn  knowledge-mcp-query.spec.edn  (+81 more)
(+2960 files in other folders)
