[package]
name = "miniforge-contracts"
version = "0.1.0"
edition = "2021"
description = "Supervisory entity contracts for miniforge — Rust-native representations of the Clojure event stream types."
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
