# Title: Miniforge.ai
# Subtitle: An agentic SDLC / fleet-control platform
# Author: Christopher Lester
# Line: Founder, Miniforge.ai (project)
# Copyright 2025-2026 Christopher Lester (christopher@miniforge.ai)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "miniforge-event-client"
version = "0.1.0"
edition = "2021"
description = "Rust event stream client for miniforge — watches ~/.miniforge/events/ for .edn files, parses events into contract types, and emits them to a channel."
license = "Apache-2.0"
authors = ["Christopher Lester <christopher@miniforge.ai>"]

[dependencies]
# EDN parsing
edn-rs = "0.17"

# File watching
notify = "6.1"

# Async runtime and channels
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }

# UUID support
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time", "test-util"] }
